# VisioChatNet

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  fly.toml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 01da2332593c_init.py  1950d414a0c9_init.py  1d084672b1cc_add_death_cascade_for_messages_in_chat.py  2f06b250e8c7_init.py  96e75f246bf7_increase_password_hash_size.py  97cc0fc604ad_initial_database_migration.py  bfe7cab56480_init.py  f41237e357aa_add_timestamp_in_message_model.py
src/: __init__.py  app.py  auth_routes.py  model_loader.py
src/ai/: cifar_10.ipynb  cifar_10_report.ipynb  training_logs.txt  training_progress.csv
src/conf/: config.py
src/database/: db.py  models.py  repository.py
src/models/: models.py
src/repository/: chat_repository.py  predict_repository.py
src/routes/: auth_routes.py  history_routes.py  predict_routes.py
src/static/js/: script.js
src/static/styles/: home.css  style.css
src/templates/: base.html
src/templates/auth/: confirm_email.html  inactive.html  login.html  register.html
src/templates/chat/: chat.html
src/templates/home/: home.html  login.html  registration.html
src/templates/home/style/: style.css
src/utils/: cache_config.py  decorators.py  email.py  preproccss_image.py  token.py
tests/: test_app.py
tests/chat_tests/: conftest.py  test_chat_repository.py
