[tool.poetry]
name = "flask-visionet"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Mit License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.13.1"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
