[tool.poetry]
name = "flask-visionet"
version = "0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Mit License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.2"
sqlalchemy = "^2.0.28"
pillow = "^10.2.0"
tensorflow = "^2.16.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
